--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage": "https://KushagraSingh1100.github.io/minimalistnews"
+    "homepage": "https://KushagraSingh1100.github.io/Minimalist-News"
 
   },
   "scripts": {
